--- a/README
+++ b/README
@@ -1,5 +1,13 @@
+# Deck of playing cards by B. P. Grimaud, Paris
+
 This is a set of 19th century French playing cards from the Smithsonian collection.
 
-Images cleaned up, sorted and cropped.
+Designed by E. Le Tellier
 
-[Original Source](https://www.si.edu/search/collection-images?edan_q=playing%2Bcard%2Bgrimaud%2Btellier&oa=1&edan_fq%5B0%5D=media_usage%3ACC0)
+Images have been cleaned up, fixed and cropped.
+
+![The Grimaud deck](img/all.jpg)
+
+[Original Source][def]
+
+[def]: https://www.si.edu/search/collection-images?edan_q=playing%2Bcard%2Bgrimaud%2Btellier&oa=1&edan_fq%5B0%5D=media_usage%3ACC0
